--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,9 @@ main:
   - name: Bio
     url: /
     weight: 10
+  - name: Experience
+    url: /#experience
+    weight: 11
   - name: Publications
     url: /#papers
-    weight: 11
-  - name: Experience
-    url: experience/
     weight: 20
