--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,12 +4,11 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Bio
+  - name: Biography
     url: /
     weight: 10
   - name: Experience
     url: /#experience
-    # url: experience/
     weight: 11
   - name: Publications
     url: /#papers
